; ModuleID = '/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_compute_get_uri_f_last_md5.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_compute_get_uri_f_last_md5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64* }
%struct.cache_uri = type { i64, i64 }

@get_uri_f_last_md5 = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@uri_off = common dso_local global i64 0, align 8
@uri2md5_extra_calls = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cache_uri*)* @compute_get_uri_f_last_md5 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @compute_get_uri_f_last_md5(%struct.cache_uri* %0) #0 {
  %2 = alloca %struct.cache_uri*, align 8
  store %struct.cache_uri* %0, %struct.cache_uri** %2, align 8
  %3 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @get_uri_f_last_md5, i32 0, i32 0), align 8
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %23, label %5

5:                                                ; preds = %1
  %6 = load %struct.cache_uri*, %struct.cache_uri** %2, align 8
  %7 = getelementptr inbounds %struct.cache_uri, %struct.cache_uri* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @uri_off, align 8
  %10 = add nsw i64 %8, %9
  %11 = call i32 @uri2md5(i64 %10, %struct.TYPE_3__* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @get_uri_f_last_md5, i32 0, i32 1))
  %12 = load i32, i32* @uri2md5_extra_calls, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* @uri2md5_extra_calls, align 4
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @get_uri_f_last_md5, i32 0, i32 0), align 8
  %14 = load %struct.cache_uri*, %struct.cache_uri** %2, align 8
  %15 = getelementptr inbounds %struct.cache_uri, %struct.cache_uri* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64*, i64** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @get_uri_f_last_md5, i32 0, i32 1, i32 0), align 8
  %18 = getelementptr inbounds i64, i64* %17, i64 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp eq i64 %16, %19
  %21 = zext i1 %20 to i32
  %22 = call i32 @assert(i32 %21)
  br label %23

23:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @uri2md5(i64, %struct.TYPE_3__*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
